2015-01-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README-UPGRADE,
 config/sample-headers/compiler/gcc-4.4/pqxx/config-public-compiler.h,
 configitems, configure.ac.in, include/pqxx/config.h.in,
 include/pqxx/connection_base.hxx:
 - Remove deprecated "noticer" definitions.
 - Remove detection of auto_ptr; it is deprecated, and no longer needed either.
2015-01-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx,
 include/pqxx/except.hxx,
 include/pqxx/row.hxx,
 include/pqxx/transaction_base.hxx,
 src/connection_base.cxx,
 src/cursor.cxx,
 test/test088.cxx,
 test/test089.cxx,
 test/test093.cxx,
 test/unit/test_parameterized.cxx,
 test/unit/test_prepared_statement.cxx:
 test/unit/test_read_transaction.cxx,
 test/unit/test_sql_cursor.cxx:
 - Drop support for frontend/backend protocol version 2; require version 3.
 - Version 3 was introduced around postgres 7.4.
 - The server only needs version 2 for clients that haven't been updated.
2015-01-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Remove some more workarounds for 8.x servers.
2015-01-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/dbtransaction.hxx, include/pqxx/subtransaction.hxx,
 src/connection_base.cxx, src/cursor.cxx, src/dbtransaction.cxx,
 src/subtransaction.cxx:
 - Drop support for 8.x backends; require 9.0 or better.
2015-01-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README-UPGRADE, config/sample-headers/libpq/, configitems, configure.ac.in,
 include/pqxx/Makefile.am, include/pqxx/compiler-internal.hxx,
 include/pqxx/config.h.in, src/binarystring.cxx, src/connection_base.cxx,
 src/util.cxx, test/test000.cxx, test/test093.cxx,
 test/unit/test_parameterized.cxx, tools/pqxx-fulltest, win32/INSTALL.txt:
 - Drop support for libpq 8.x; require 9.0 or better.
 - The whole config header for libpq features is currently gone!
2015-01-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/gcc-4.4/pqxx/config-internal-compiler.h,